tests/ui/scalar_types_postgres/fail/instr_requires_sqlite.stderr
error[E0277]: this string function is not available for this dialect
 --> tests/ui/scalar_types_postgres/fail/instr_requires_sqlite.rs:5:13
  |
5 |       let _ = instr(
  |  _____________^
6 | |         raw_non_null::<PostgresValue, drizzle::postgres::types::Text>("'hello'"),
7 | |         raw_non_null::<PostgresValue, drizzle::postgres::types::Text>("'ll'"),
8 | |     );
  | |_____^ use a dialect-specific alternative
  |
  = help: the trait `SQLiteStringSupport` is not implemented for `PostgresDialect`
help: the trait `SQLiteStringSupport` is implemented for `SQLiteDialect`
 --> core/src/expr/string.rs
  |
  | impl SQLiteStringSupport for SQLiteDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `instr`
 --> core/src/expr/string.rs
  |
  | pub fn instr<'a, V, E, S>(
  |        ----- required by a bound in this function
...
  |     V::DialectMarker: SQLiteStringSupport,
  |                       ^^^^^^^^^^^^^^^^^^^ required by this bound in `instr`
